# aiohttp-demos

demos/polls/: Makefile  README.rst  requirements.txt  setup.cfg  test_requirements.txt  tox.ini
demos/polls/aiohttpdemo_polls/: views.py
demos/polls/aiohttpdemo_polls/marshall/: question.py
demos/polls/config/: polls.yaml  polls_test.yaml
demos/polls/dpo_tis_journal/: __main__.py  db.py  main.py  routes.py  views.py
demos/polls/dpo_tis_journal/marshall/: choice.py  user_journal.py
demos/polls/tests/: conftest.py  init_db.py  test_integration.py
demos/polls/tests/serialize/: test_march.py
