[metadata]
name = aiohttpdemo_polls
author = Jan Vlcinsky
author-email = jan.vlcinsky@tamtamresearch.com
summary = Polls project example from aiohttp
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://tamtamresearch.com
keywords = 
    journal
    tis
[files]
packages =
    aiohttpdemo_polls

[entry_points]
console_scripts =
    aiohttpdemo_polls = aiohttpdemo_polls.cmd:main
