[metadata]
name = dpo_tis_journal
author = Jan Vlcinsky
author-email = jan.vlcinsky@tamtamresearch.com
summary = Collect and provide journal for TIS project
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://tamtamresearch.com
keywords = 
    journal
    tis
[files]
packages =
    dpo_tis_journal

[entry_points]
console_scripts =
    dpo_tis_journal = dpo_tis_journal.cmd:main
